cloud formation button

--- a/superceded/README_SS_25-04-2019.md
+++ b/superceded/README_SS_25-04-2019.md
@@ -2,16 +2,25 @@ This workshop builds on top of the [Sagemaker Examples](https://github.com/awsla
 
 # Instructions
 
+## Configure the AWS CLI!
+
+This guide assumes your have the AWS Command line interface (CLI) installed. For information on installing the CLI on your system OSx/Windows/Linux etc, head on over to this link:
+[Install AWS's CLI on your system](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html)
+
+1. Configure the AWS client by typing in your terminal: `aws configure`
+2. for access key id: enter YOUR aws access key id, it should look something like this example `ABICWAYMZF78SDVKGPX9D`
+3. for secret access key: enter YOUR aws secret access key, it should look something like this example `FkF8dVIwMUZLdMgwerSvKzeqrLeqvSuwyy23enedc`
+4. for default region name select: `ap-northeast-1`
+5. for default output format: press enter
+
 
 ## Step 0 - Cloud Formation Installation
 
-Click below to deploy your SageMaker RL stack:
+Once you have the CLI installed, setting up this lab is as easy as running the following command in your terminal:
 
-&nbsp;
+`aws cloudformation create-stack --stack-name awsRLSummit2019 --template-body https://s3-ap-southeast-2.amazonaws.com/aws-summit-2019-rl/AWS-summit_RL-CloudFormation.yml --capabilities CAPABILITY_IAM`
 
-[![Launch Stack into us-east-1 with CloudFormation](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/images/cloudformation-launch-stack-button.png)](https://console.aws.amazon.com/cloudformation/home?region=us-east-1#/stacks/new?stackName=SageMakerRLLabSummitSydney2019&templateURL=https://s3-ap-southeast-2.amazonaws.com/aws-summit-2019-rl/AWS-summit_RL-CloudFormation.yml)
 
-&nbsp;
 
 ## Step 1 - Login to Sagemaker
 &nbsp;
@@ -32,19 +41,12 @@ Click below to deploy your SageMaker RL stack:
 
 
 1. On the left menu under the "Notebook" section, click "Notebook instances"
-
 &nbsp;
-&nbsp;
-
 ![menu](images/awssagemakerhome.png)
 &nbsp;
 2. Next to our instance named "amazon-RL-lab" there is a link called "open jupyter", click it.
-
 &nbsp;
-&nbsp;
-
 ![menu](images/openjupyter.png)
-
 &nbsp;
 3. A new tab will launch taking you to a jupyter notebook. Once this has finished loading, click the link titled "Summit-RL"
 4. Clicking the link will take you to a new directory. Click the file titled **"Sagemaker_RL_Lab_Summit_2019_One_Click.ipynb"** to get started with the lab!
