--- a/Sagemaker_RL_Lab_Summit_2019_One_Click.ipynb
+++ b/Sagemaker_RL_Lab_Summit_2019_One_Click.ipynb
@@ -28,6 +28,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![alt text](https://cdn-images-1.medium.com/max/1200/1*XyIpmXXAjbXerDzmGQL1yA.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Hi! and welcome to the sage maker Reinforcement Learning lab for AWS Summit 2019. "
    ]
   },
@@ -276,7 +290,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,7 +358,7 @@
    "source": [
     "Things have changed since 2015 however & lucky for us the introduction of DQN kicked off a wave of resurgence in academic study focussing on Reinforcement Learning, [leading to many new algorithms](https://arxiv.org/pdf/1708.07902.pdf), some of which we can see in the image below! \n",
     "\n",
-    "Notice how DQN is the middle!"
+    "**Notice how DQN is the middle!**"
    ]
   },
   {
@@ -384,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of today's lab is going to be:\n",
+    "The objective of today's lab is:\n",
     "\n",
     "1. Make use of a state of the art Reinforcement Learning algorithm (IMPALA) to learn how to play the Atari game of breakout!\n",
     "2. Make use of Amazon's state of the art compute resources. Instead of 3.125 days of training time, we are going to train our RL Agent to play Atari Breakout in 15 minutes."
@@ -408,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the first cell block that you ran at the start of this workshop we actually started training out IMPALA algorithm on the Atari game of breakout!\n",
+    "**In the first cell block that you ran at the start of this workshop we actually started training out IMPALA algorithm on the Atari game of breakout!**\n",
     "\n",
     "So you should be roughly 8 minutes though the training process already!\n",
     "\n",
