tidying up notebook

--- a/Sagemaker_RL_Lab_Summit_2019_One_Click.ipynb
+++ b/Sagemaker_RL_Lab_Summit_2019_One_Click.ipynb
@@ -145,8 +145,11 @@
     "# ONE CLICK REINFORCEMENT LEARNING!\n",
     "\n",
     "# RUN ME BY FIRST SELECTING THIS BLOCK, AND CLICKING \"RUN\" ABOVE!\n",
+    "\"\"\"\n",
+    "### Import relevant libraries\n",
     "\n",
-    "#import relevant Python libraries\n",
+    "First we imported the relevant Python libraries, you can re do this\n",
+    "\"\"\"\n",
     "import sagemaker\n",
     "import boto3\n",
     "import sys\n",
@@ -165,20 +168,43 @@
     "\n",
     "gym_problem = 'breakout'\n",
     "\n",
-    "#setup an s3 bucket to store data!\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "### Setup S3 bucket\n",
+    "\n",
+    "Set up the linkage and authentication to the S3 bucket. \n",
+    "S3 Buckets are a form of data storage available on AWS. \n",
+    "Our bucket will be used for checkpointing and the metadata. \n",
+    "\"\"\"\n",
     "sage_session = sagemaker.session.Session()\n",
     "s3_bucket = sage_session.default_bucket()  \n",
     "s3_output_path = 's3://{}/'.format(s3_bucket)\n",
     "print(\"S3 bucket path: {}\".format(s3_output_path))\n",
     "\n",
     "\n",
+    "\n",
+    "\"\"\"\n",
+    "### Define Variables \n",
+    "\n",
+    "We define variables such as the job prefix for the training jobs \n",
+    "and the image path for the container (only when this is BYOC).\n",
+    "\"\"\"\n",
     "job_name_prefix = 'rl-gym-summit'\n",
     "aws_region = boto3.Session().region_name\n",
     "\n",
     "instance_type = \"ml.p3.8xlarge\"\n",
     "train_instance_count = 1\n",
     "\n",
-    "#setup an IAM role!\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "### Create an IAM role\n",
+    "\n",
+    "Either get the execution role when running from a SageMaker notebook instance \n",
+    "`role = sagemaker.get_execution_role()` or, when running from local notebook instance, \n",
+    "use utils method `role = get_execution_role()` to create an execution role.\n",
+    "\"\"\"\n",
     "try:\n",
     "    role = sagemaker.get_execution_role()\n",
     "except:\n",
@@ -186,8 +212,37 @@
     "\n",
     "print(\"Using IAM role arn: {}\".format(role))\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "### Build docker container for SageMaker Training job.\n",
+    "\n",
+    "The commented code below will build a container, \n",
+    "however it takes some time so we've prebuilt the container for this workshop\n",
+    "\n",
+    "    cpu_or_gpu = 'gpu' if instance_type.startswith('ml.p') else 'cpu'\n",
+    "    repository_short_name = \"sagemaker-gym-ray-%s\" % cpu_or_gpu\n",
+    "    docker_build_args = {\n",
+    "        'CPU_OR_GPU': cpu_or_gpu, \n",
+    "        'AWS_REGION': boto3.Session().region_name,\n",
+    "    }\n",
+    "    custom_image_name = build_and_push_docker_image(repository_short_name, build_args=docker_build_args)\n",
+    "    print(\"Using ECR image %s\" % custom_image_name)    \n",
+    "    print(\"the repo name is \", repository_short_name)\n",
+    "\"\"\"\n",
     "custom_image_name = \"413953306596.dkr.ecr.us-east-1.amazonaws.com/sagemaker-gym-ray-gpu\"\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "### Start a training job\n",
+    "This will run a training job on a a separate VM instance (ml.p3.8xlarge). \n",
+    "You can view the status of this training job from the Amazon Sagemaker menu\n",
+    "\n",
+    "Amazon Sagemaker --> Training --> Training Jobs\n",
+    "\"\"\"\n",
     "metric_definitions = RLEstimator.default_metric_definitions(RLToolkit.RAY)\n",
     "    \n",
     "estimator = RLEstimator(entry_point=\"train-%s.py\" % gym_problem,\n",
@@ -209,7 +264,19 @@
     "\n",
     "estimator.fit(wait=False)\n",
     "job_name = estimator.latest_training_job.job_name\n",
-    "print(\"Training job: %s\" % job_name)\n"
+    "print(\"Training job: %s\" % job_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### View Training Job\n",
+    "The above cell will run a training job on a a separate VM instance (ml.p3.8xlarge). You can view the status of this training job from the Amazon Sagemaker menu. It will take a few minutes for the instance to be created before training starts. \n",
+    "\n",
+    "If you like to see the above training job please follow this link\n",
+    "\n",
+    "<a href=\"https://console.aws.amazon.com/sagemaker/home?region=us-east-1#/jobs\" target=\"_blank\">https://console.aws.amazon.com/sagemaker/home?region=us-east-1#/jobs</a>"
    ]
   },
   {
@@ -251,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -271,10 +338,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x11197f5f8>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f8ab46542e8>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -326,10 +393,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1119b1390>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f8ab4649160>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,8 +540,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fetch videos of training rollouts\n",
-    "Videos of certain rollouts get written to S3 during training.  Here we fetch the last 10 videos from S3, and render the last one."
+    "### Watch your Reinforcement Agent training live!!\n",
+    "\n",
+    "Videos of certain rollouts get written to S3 during training.  We can observe our Reinforcement learning agent learning live!  Here we fetch the last 10 videos from S3, and render the last one.  \n",
+    "\n",
+    "#### Initially you'll notice that the agent will lose the game straight away because it's not very intelligent yet, but if you continue to run the cell below every few minutes throughout the workshop you'll see the agent \"learn\" and get more intelligent over time.\n",
+    "&nbsp;\n",
+    "&nbsp;"
    ]
   },
   {
@@ -484,34 +556,9 @@
    "outputs": [],
    "source": [
     "recent_videos = wait_for_s3_object(s3_bucket, intermediate_folder_key, tmp_dir, \n",
-    "                                fetch_only=(lambda obj: obj.key.endswith(\".mp4\") and obj.size>0), limit=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Watch your Reinforcement Agent training live!!\n",
+    "                                fetch_only=(lambda obj: obj.key.endswith(\".mp4\") and obj.size>0), limit=10)\n",
     "\n",
-    "Here we can observe our Reinforcement learning agent learning live!\n",
-    "\n",
-    "**If you would like to see the agent \"learn\" and get more intelligent over time, come back here and rerun the cell below!!**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "last_video = sorted(recent_videos)[-1]  # Pick which video to watch\n",
+    "last_video = recent_videos[-1]  # Pick which video to watch\n",
     "os.system(\"mkdir -p ./src/tmp_render/ && cp {} ./src/tmp_render/last_video.mp4\".format(last_video))\n",
     "HTML('<video src=\"./src/tmp_render/last_video.mp4\" controls autoplay></video>')"
    ]
@@ -520,171 +567,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import relevant libraries\n",
-    "\n",
-    "First we imported the relevant Python libraries, you can re do this"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 90201
-    },
-    "colab_type": "code",
-    "id": "OJb-2Dufmqs-",
-    "outputId": "3051beae-ffbc-4347-a018-83d9aa46b658"
-   },
-   "outputs": [],
-   "source": [
-    "import sagemaker\n",
-    "import boto3\n",
-    "import sys\n",
-    "import os\n",
-    "import glob\n",
-    "import re\n",
-    "import subprocess\n",
-    "from IPython.display import HTML, Markdown\n",
-    "import time\n",
-    "from time import gmtime, strftime\n",
-    "sys.path.append(\"common\")\n",
-    "from misc import get_execution_role, wait_for_s3_object\n",
-    "from docker_utils import build_and_push_docker_image\n",
-    "from sagemaker.rl import RLEstimator, RLToolkit, RLFramework\n",
-    "from markdown_helper import generate_help_for_s3_endpoint_permissions, create_s3_endpoint_manually"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Setup S3 bucket\n",
-    "\n",
-    "Set up the linkage and authentication to the S3 bucket. S3 Buckets are a form of data storage available on AWS. Our bucket will be used for checkpointing and the metadata. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sage_session = sagemaker.session.Session()\n",
-    "s3_bucket = sage_session.default_bucket()  \n",
-    "s3_output_path = 's3://{}/'.format(s3_bucket)\n",
-    "print(\"S3 bucket path: {}\".format(s3_output_path))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define Variables \n",
-    "\n",
-    "We define variables such as the job prefix for the training jobs *and the image path for the container (only when this is BYOC).*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a descriptive job name \n",
-    "job_name_prefix = 'rl-gym-summit'\n",
-    "aws_region = boto3.Session().region_name\n",
-    "\n",
-    "instance_type = \"ml.p3.8xlarge\"\n",
-    "train_instance_count = 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create an IAM role\n",
-    "\n",
-    "Either get the execution role when running from a SageMaker notebook instance `role = sagemaker.get_execution_role()` or, when running from local notebook instance, use utils method `role = get_execution_role()` to create an execution role."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    role = sagemaker.get_execution_role()\n",
-    "except:\n",
-    "    role = get_execution_role()\n",
-    "\n",
-    "print(\"Using IAM role arn: {}\".format(role))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Build a docker container..usually we have to but we did this for you earlier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "custom_image_name = \"413953306596.dkr.ecr.us-east-1.amazonaws.com/sagemaker-gym-ray-gpu\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Start a training job\n",
-    "This will run a training job on a a separate VM instance (ml.p3.8xlarge). You can view the status of this training job from the Amazon Sagemaker menu\n",
-    "\n",
-    "Amazon Sagemaker --> Training --> Training Jobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metric_definitions = RLEstimator.default_metric_definitions(RLToolkit.RAY)\n",
-    "    \n",
-    "estimator = RLEstimator(entry_point=\"train-%s.py\" % gym_problem,\n",
-    "                        source_dir='src',\n",
-    "                        dependencies=[\"common/sagemaker_rl\"],\n",
-    "                        image_name=custom_image_name,\n",
-    "                        role=role,\n",
-    "                        train_instance_type=instance_type,\n",
-    "                        train_instance_count=train_instance_count,\n",
-    "                        output_path=s3_output_path,\n",
-    "                        base_job_name=job_name_prefix,\n",
-    "                        metric_definitions=metric_definitions,\n",
-    "                        hyperparameters={\n",
-    "                            # ml.p3.8xlarge has 32 cores. We have to leave 1 core for ray scheduler.\n",
-    "                            \"rl.training.config.num_workers\": 32 * train_instance_count - 1,\n",
-    "                            \"rl.training.config.num_gpus\": 2\n",
-    "                        }\n",
-    "                    )\n",
-    "\n",
-    "estimator.fit(wait=False)\n",
-    "job_name = estimator.latest_training_job.job_name\n",
-    "print(\"Training job: %s\" % job_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Plot metrics for training job\n",
-    "We can see the reward metric of the training as it's running, using algorithm metrics that are recorded in CloudWatch metrics.  We can plot this to see the performance of the model over time."
+    "We can see the reward metric of the training as it's running, using algorithm metrics that are recorded in CloudWatch metrics.  We can plot this to see the performance of the model over time.\n",
+    "\n",
+    "#### Rerun the cell below every few minutes throughout the workshop to see the plot of the agent's \"average reward\" over time"
    ]
   },
   {
@@ -712,119 +598,6 @@
    "source": [
     "# End of lab."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Below is support documentation for initializing the lab:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Build docker container\n",
-    "\n",
-    "We must build a custom docker container with Gym[Atari] installed.  This takes care of everything:\n",
-    "\n",
-    "1. Fetching base container image\n",
-    "2. Installing Gym[Atari] and its dependencies\n",
-    "3. Uploading the new container image to ECR\n",
-    "\n",
-    "This step can take a long time if you are running on a machine with a slow internet connection.  If your notebook instance is in SageMaker or EC2 it should take 3-10 minutes depending on the instance type.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# RUN THIS CELL AT THE START OF THE LAB\n",
-    "\n",
-    "#%time\n",
-    "\n",
-    "gym_problem = 'breakout'\n",
-    "\n",
-    "\n",
-    "import sagemaker\n",
-    "import boto3\n",
-    "import sys\n",
-    "import os\n",
-    "import glob\n",
-    "import re\n",
-    "import subprocess\n",
-    "from IPython.display import HTML, Markdown\n",
-    "import time\n",
-    "from time import gmtime, strftime\n",
-    "sys.path.append(\"common\")\n",
-    "from misc import get_execution_role, wait_for_s3_object\n",
-    "from docker_utils import build_and_push_docker_image\n",
-    "from sagemaker.rl import RLEstimator, RLToolkit, RLFramework\n",
-    "from markdown_helper import generate_help_for_s3_endpoint_permissions, create_s3_endpoint_manually\n",
-    "\n",
-    "sage_session = sagemaker.session.Session()\n",
-    "s3_bucket = sage_session.default_bucket()  \n",
-    "s3_output_path = 's3://{}/'.format(s3_bucket)\n",
-    "print(\"S3 bucket path: {}\".format(s3_output_path))\n",
-    "\n",
-    "# create a descriptive job name \n",
-    "job_name_prefix = 'rl-gym-distributed-' + gym_problem\n",
-    "aws_region = boto3.Session().region_name\n",
-    "\n",
-    "# run in local_mode on this machine, or as a SageMaker TrainingJob?\n",
-    "local_mode = False\n",
-    "\n",
-    "if local_mode:\n",
-    "    instance_type = 'local'\n",
-    "else:\n",
-    "    # If on SageMaker, pick the instance type\n",
-    "#     instance_type = \"ml.c5.2xlarge\"\n",
-    "#     instance_type = \"ml.p3.2xlarge\"\n",
-    "    instance_type = \"ml.p3.8xlarge\"\n",
-    "#     instance_type = \"ml.p3.16xlarge\"\n",
-    "#     instance_type = \"ml.m4.10xlarge\"\n",
-    "    \n",
-    "    \n",
-    "train_instance_count = 1\n",
-    "\n",
-    "try:\n",
-    "    role = sagemaker.get_execution_role()\n",
-    "except:\n",
-    "    role = get_execution_role()\n",
-    "\n",
-    "print(\"Using IAM role arn: {}\".format(role))\n",
-    "\n",
-    "# only run from SageMaker notebook instance\n",
-    "if local_mode:\n",
-    "    !/bin/bash ./common/setup.sh\n",
-    "    \n",
-    "\n",
-    "\n",
-    "cpu_or_gpu = 'gpu' if instance_type.startswith('ml.p') else 'cpu'\n",
-    "repository_short_name = \"sagemaker-gym-ray-%s\" % cpu_or_gpu\n",
-    "docker_build_args = {\n",
-    "    'CPU_OR_GPU': cpu_or_gpu, \n",
-    "    'AWS_REGION': boto3.Session().region_name,\n",
-    "}\n",
-    "custom_image_name = build_and_push_docker_image(repository_short_name, build_args=docker_build_args)\n",
-    "print(\"Using ECR image %s\" % custom_image_name)    \n",
-    "print(\"the repo name is \", repository_short_name)\n",
-    "\n",
-    "# %%time\n",
-    "\n",
-    "# cpu_or_gpu = 'gpu' if instance_type.startswith('ml.p') else 'cpu'\n",
-    "# repository_short_name = \"sagemaker-gym-ray-%s\" % cpu_or_gpu\n",
-    "# docker_build_args = {\n",
-    "#     'CPU_OR_GPU': cpu_or_gpu, \n",
-    "#     'AWS_REGION': boto3.Session().region_name,\n",
-    "# }\n",
-    "# custom_image_name = build_and_push_docker_image(repository_short_name, build_args=docker_build_args)\n",
-    "# print(\"Using ECR image %s\" % custom_image_name)"
-   ]
   }
  ],
  "metadata": {
@@ -835,9 +608,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_tensorflow_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -849,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
