updating for readonly notebooks to fix video not displaying

--- a/Sagemaker_RL_Lab_Summit_2019_One_Click.ipynb
+++ b/Sagemaker_RL_Lab_Summit_2019_One_Click.ipynb
@@ -559,7 +559,7 @@
     "                                fetch_only=(lambda obj: obj.key.endswith(\".mp4\") and obj.size>0), limit=10)\n",
     "\n",
     "last_video = recent_videos[-1]  # Pick which video to watch\n",
-    "os.system(\"mkdir -p ./src/tmp_render/ && cp {} ./src/tmp_render/last_video.mp4\".format(last_video))\n",
+    "os.system(\"sudo mkdir -p ./src/tmp_render/ && sudo cp {} ./src/tmp_render/last_video.mp4\".format(last_video))\n",
     "HTML('<video src=\"./src/tmp_render/last_video.mp4\" controls autoplay></video>')"
    ]
   },
